# snipara-memory

./: .gitignore  CONTRIBUTING.md  LAUNCH_NOTES.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md
benchmarks/datasets/: basic_recall.jsonl
docs/: INDEX.md  getting-started.md  importers.md  mcp.md  publishing.md
examples/: contradiction_flow.py  quickstart.py  transcript.txt
prisma/: schema.prisma
src/snipara_memory/: __init__.py  __main__.py  benchmark.py  cli.py  importers.py  mcp_server.py
src/snipara_memory/adapters/: __init__.py  in_memory_store.py  json_file_store.py
src/snipara_memory/api/: __init__.py  fastapi_app.py
src/snipara_memory/domain/: __init__.py  models.py  service.py
src/snipara_memory/ports/: __init__.py  cache.py  embeddings.py  store.py
tests/: test_api.py  test_benchmark.py  test_importers.py  test_json_file_store.py  test_memory_service.py
